# test-ws-fastapi

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: hello.py
app/core/: config.py  security.py
