[project]
name = "test-ws-fastapi"
version = "0.1.0"
description = "Minimal FastAPI project with API key authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.0",
]
