[project]
name = "test-ws-fastapi"
version = "0.1.0"
description = "Minimal FastAPI project with API key authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project.scripts]
start-api = "app.main:main"

[dependency-groups]
dev = [
    "flake8>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
